sass/src/pleiades.scss
/* ... */
.level {
	@include raised-text($grey8);
	padding: 0 1em;
	margin-bottom: 2em;
	color: $grey8;

	a {
		color: $grey8;
	}

	a.name {
		display: block;
		color: $greyD;
		overflow: hidden;
		white-space: nowrap;
		text-decoration: none;
		font-weight: normal;
		width: 80%;
		text-shadow: 0px 1px 0px $black;
		float: left;
	}

	a.name:hover {
		text-decoration: underline;
	}

	.level_header {
		background: $grey2;
		height: 3.75em;
		padding: .5em;
	}

	.thumbnail-wrapper {
		width: 100%;
		background: black;
		border: 1px solid $grey2;
		display: block;
		clear: both;
		margin-top: .5em;
	}

	.thumbnail {
		border: 0px;
		border-radius: 0;
		padding: 0;
		margin: 0 auto;
		vertical-align: middle;
		max-width: 100%;
	}

	.rating {
		display: block;
		max-width: 15%;
		padding: 0 .25em;
		margin-bottom: .25em;
		float: right;
		text-align: center;
		background: $grey4;
		color: $greyC;
		border-radius: 3px;
	}

	.author {
		display: block;
		clear: both;
		white-space: nowrap;
		max-width: 50%;
		overflow: hidden;
		float: right;
		line-height: 1em;
		padding-bottom: 1em;
	}

	.author a {
		color: $greyA;
		text-decoration: none;
	}

	.author a:hover {
		color: $link_hover;
		text-decoration: underline;
	}

	.level_info {
		display: block;
		text-align: right;
		font-size: .8em;
		float: left;
		clear: none;
	}

	.level-stats {
		float: right;
		text-align: right;
		height: 2.5em;
		width: 20%;

		img {
			height: 1em;
			width: 1em;
			margin-left: .5em;
		}

		div {
			height: 50%;
		}

		.level-stats-comments {

		}

		.level-stats-downloads {
			
		}
	}
}

.level_info {
	display: block;
	clear: both;
}

.download-count {
	float: left;
	clear: left;
}

.team-color {
	display: inline-block;
	width: 1em;
	height: 1em;
	margin: 0;
	border-radius: .25em;
}

.team_count {
	line-height: 100%;
}

.game_type {
	line-height: 100%;
}

.download-instructions-container {
	margin-top: 1em;
	text-align: center;
	overflow: hidden;
	width: 100%;
}

.download-instructions {
	@include rounded();
	margin: .5em auto;
	font-size: 2em;
	font-family: monospace;
	color: $greyD;
	padding: .25em;
	background: $grey1;
	display: block;
	overflow: hidden;
}

.rating .rating {
	display: inline-block;
	float: right;
	margin-bottom: 14px;
}

.rating a, .rating a:hover {
	background: none;
	background-repeat: no-repeat;
	border: none;
	overflow: visible;
	height: 50px;
	width: 30px;
	display: inline-block;
	padding: 0;
	margin-left: 1em;
	text-decoration: none;
}

.rating .upvote, .rating .downvote {
	float: right;
	clear: right;
}

.rating .upvote a {
	background-image: url("../img/up_inactive.png");
}

.rating .downvote a {
	background-image: url("../img/down_inactive.png");
	background-position: left bottom;
	margin-bottom: -100px;
}

.rating .upvote .active {
	background-image: url("../img/up_active.png");
}

.rating .downvote .active {
	background-image: url("../img/down_active.png");
}

.rating .total {
	font-size: 5em;
	font-weight: bold;
	float: left;
	line-height: 100px;
	display: inline-block;
	min-width: 100px;
	text-align: right;
	text-shadow: 0 2px 2px $grey1;
	color: $greyE;
}

#content > .comment {
	font-family: sans-serif;
	margin-bottom: 1em;
	padding: .5em;
}

.comment-author {
	font-weight: bold;
	margin-bottom: .5em;
}

.comment-text {
	white-space: pre-line;
	width: 100%;
}

.mass-upload-info {
	tr, tr.success {
		background: none;
		border: none;
		border-bottom: 1px solid $grey2;
	}

	tr.success {
	}

	tr.failure {
	}

	td.message {
		font-size: .7em;
	}
}

